// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when downloading is false 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
}

.c1 path {
  fill: #007;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 {
  font-size: 0.875rem;
  color: #007;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

<div
  className="sc-AxirZ c0"
  direction="row"
  height="24px"
  onClick={[MockFunction]}
  style={
    Object {
      "cursor": "pointer",
    }
  }
>
  <svg
    className="c1"
    color="#007"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M19,9 L15,9 L15,3 L9,3 L9,9 L5,9 L12,16 L19,9 Z M5,18 L5,20 L19,20 L19,18 L5,18 Z"
    />
  </svg>
  <div
    className="sc-fznXWL c2"
    size="small"
    type="secondary"
  >
    Download Transactions
  </div>
</div>
`;

exports[`renders correctly when downloading is true 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
}

.c1 path {
  fill: #667;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 {
  font-size: 0.875rem;
  color: #667;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

<div
  className="sc-AxirZ c0"
  direction="row"
  height="24px"
  style={
    Object {
      "cursor": "no-drop",
    }
  }
>
  <svg
    className="c1"
    color="#667"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M19,9 L15,9 L15,3 L9,3 L9,9 L5,9 L12,16 L19,9 Z M5,18 L5,20 L19,20 L19,18 L5,18 Z"
    />
  </svg>
  <div
    className="sc-fznXWL c2"
    size="small"
    type="disabled"
  >
    Downloading...
  </div>
</div>
`;
